--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -8,12 +8,47 @@
     <AssemblyName>RendleLabs.OpenApi.Web</AssemblyName>
   </PropertyGroup>
   
+  <PropertyGroup>
+    <PackageId>RendleLabs.OpenApi.Web</PackageId>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/RendleLabs/OpenApi</PackageProjectUrl>
+    <PackageTags>openapi;swagger</PackageTags>
+    <Version>0.1.1-beta</Version>
+  </PropertyGroup>
+  
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.3.2" />
+    <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/absolute-path.js" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/favicon-16x16.png" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/favicon-32x32.png" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/index.css" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/index.html" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/index.js" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/oauth2-redirect.html" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui-bundle.js" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui-bundle.js.map" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui-standalone-preset.js" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui-standalone-preset.js.map" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui.css" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui.css.map" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui.js" />
+    <EmbeddedResource Include="node_modules/swagger-ui-dist/swagger-ui.js.map" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="package-lock.json" />
+  </ItemGroup>
+
+  <Target Name="NpmInstall" Inputs="package.json" Outputs="node_modules/.install-stamp" BeforeTargets="BeforeBuild">
+    <Exec Command="npm install" />
+    <Touch Files="node_modules/.install-stamp" AlwaysCreate="true" />
+  </Target>
+  
 </Project>
