--- a/test/Testing.Tests/Testing.Tests.csproj
+++ b/test/Testing.Tests/Testing.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -24,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Testing\Testing.csproj" />
+    <ProjectReference Include="..\Testing.Api\Testing.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +33,8 @@
     <EmbeddedResource Include="HttpBin\yaml\openapi.yaml" />
     <None Remove="HttpBin\yaml\openapi.tests.yaml" />
     <EmbeddedResource Include="HttpBin\yaml\openapi.tests.yaml" />
+    <None Remove="Api\openapi.tests.yaml" />
+    <EmbeddedResource Include="Api\openapi.tests.yaml" />
   </ItemGroup>
 
 </Project>
