--- a/test/Bundle.Tests/Bundle.Tests.csproj
+++ b/test/Bundle.Tests/Bundle.Tests.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    <RootNamespace>RendleLabs.OpenApi.Bundle.Tests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,16 +27,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="TestData\Country.schema.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="TestData\IsoCountryCode.schema.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="TestData\openapi.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestData\openapi.yaml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Schema\Country.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Schema\IsoCountryCode.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\Responses\InternalServerError.yaml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
