--- a/src/Testing/Testing.csproj
+++ b/src/Testing/Testing.csproj
@@ -9,10 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.3.2" />
     <PackageReference Include="System.Text.Json" Version="6.0.5" />
     <PackageReference Include="xunit.assert" Version="2.4.2" />
+    <PackageReference Include="xunit.core" Version="2.4.2" />
     <PackageReference Include="YamlDotNet" Version="12.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <InternalsVisibleTo Include="Testing.Xunit" />
   </ItemGroup>
   
 </Project>
